basic image display

--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
   ],
   "author": "Todd Radigan",
   "dependencies": {
+    "iron-flex-layout": "PolymerElements/iron-flex-layout#^1.0",
 		"iron-image": "PolymerElements/iron-image#^1.0",
     "polymer": "Polymer/polymer#^1.0"
   }
