added option to show image nav buttons

--- a/bower.json
+++ b/bower.json
@@ -6,8 +6,10 @@
   ],
   "author": "Todd Radigan",
   "dependencies": {
+    "iron-icons": "PolymerElements/iron-icons#^1.1",
 		"iron-image": "PolymerElements/iron-image#^1.2",
     "iron-pages": "PolymerElements/iron-pages#^1.0",
+    "paper-fab": "PolymerElements/paper-fab#^1.1",
     "polymer": "Polymer/polymer#^1.2"
   }
 }
