adding 'close' button for image view

--- a/bower.json
+++ b/bower.json
@@ -2,14 +2,14 @@
   "name": "Image Gallery",
   "description": "simple polymer image gallery",
   "homepage": "https://github.com/toddradigan/image-gallery",
-  "keywords": [
-  ],
+  "keywords": [],
   "author": "Todd Radigan",
   "dependencies": {
     "iron-icons": "PolymerElements/iron-icons#^1.1",
 		"iron-image": "PolymerElements/iron-image#^1.2",
     "iron-pages": "PolymerElements/iron-pages#^1.0",
     "paper-fab": "PolymerElements/paper-fab#^1.1",
+    "paper-icon-button": "PolymerElements/paper-icon-button#^1.0",
     "polymer": "Polymer/polymer#^1.2"
   }
 }
