--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,7 @@
     "iron-icons": "PolymerElements/iron-icons#^1.1",
 		"iron-image": "PolymerElements/iron-image#^1.2",
     "iron-pages": "PolymerElements/iron-pages#^1.0",
+    "iron-resizable-behavior": "PolymerElements/iron-resizable-behavior#^1.0",
     "paper-fab": "PolymerElements/paper-fab#^1.1",
     "paper-icon-button": "PolymerElements/paper-icon-button#^1.0",
     "polymer": "Polymer/polymer#^1.2"
